migrate to Java 11